--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ description: Personal information for Michael Hoffert with work experience.
 
 permalink: /:year/:month/:day/:title/
 paginate: 10
-pygments: true
+highlighter: pygments
 
 exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
